objects/zqu__Sync_History__c.object
<CustomObject>
    <fields>
        <fullName>zqu__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Failure_Log__c</fullName>
        <label>Failure Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__Finished_On__c</fullName>
        <label>Finished On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zqu__Is_Async__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Async</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Is_Cancel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Cancel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Is_Incremental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Incremental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Is_Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zqu__Job_State_Id__c</fullName>
        <label>Job State Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Process_For_CrmId_Change__c</fullName>
        <label>CRMID Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Data</fullName>
                    <default>true</default>
                    <label>No Data</label>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Finished</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Sync_By__c</fullName>
        <label>Sync By</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Sync_Error__c</fullName>
        <label>Sync Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zqu__Sync_On__c</fullName>
        <label>Sync On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zqu__Sync_Target__c</fullName>
        <label>Sync Target</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACCOUNTS_AND_RELATED_OBJECTS</fullName>
                </value>
                <value>
                    <fullName>PRODUCT_CATALOG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zqu__Sync_To__c</fullName>
        <label>Sync To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Target_Id__c</fullName>
        <label>Target Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Tenant_Id__c</fullName>
        <label>Tenant Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Zuora_Hostname__c</fullName>
        <label>Zuora Hostname</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Sync History</label>
    <nameField>
        <label>Sync History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sync Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>